--- a/ext/build_defaults.yaml
+++ b/ext/build_defaults.yaml
@@ -1,6 +1,6 @@
 ---
 project: 'puppet-agent'
-packaging_url: 'git://github.com/puppetlabs/packaging.git --branch=master'
+packaging_url: 'git://github.com/melissa/packaging.git --branch=ticket/master/RE-8726-allow-ship-to-nonfinal-repo'
 packaging_repo: 'packaging'
 # foss_platforms will be shipped to the nightly repos
 foss_platforms:
@@ -123,8 +123,8 @@ platform_repos:
     repo_location: repos/solaris/11/**/*.i386.p5p
   - name: solaris-11-sparc
     repo_location: repos/solaris/11/**/*.sparc.p5p
-gpg_name: 'info@puppetlabs.com'
 gpg_key: '7F438280EF8D349F'
+nonfinal_gpg_key: 'B8F999C007BB6C57'
 deb_targets: 'trusty-amd64 xenial-amd64'
 rpm_targets: 'el-6-x86_64 el-7-x86_64 sles-11-x86_64 sles-12-x86_64'
 sign_tar: FALSE
@@ -132,6 +132,8 @@ osx_signing_cert: "Developer ID Installer: PUPPET LABS, INC. (VKGLGN2B6Y)"
 osx_signing_keychain: "/Users/jenkins/Library/Keychains/signing.keychain"
 osx_signing_server: 'osx-signer.delivery.puppetlabs.net'
 vanagon_project: TRUE
-apt_repo_name: 'PC1'
-yum_repo_name: 'PC1'
+apt_repo_name: 'puppet5'
+apt_nonfinal_repo_name: 'puppet5-nightlies'
+yum_repo_name: 'puppet5'
+yum_nonfinal_repo_name: 'puppet5-nightlies'
 build_tar: FALSE
